--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.13",
+    "expo": "^49.0.0",
+    "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.0",
     "react": "18.2.0",
     "react-native": "0.72.5"
   },
